--- a/html/20240510/01margin.html
+++ b/html/20240510/01margin.html
@@ -17,9 +17,9 @@
     </style>
 </head>
 <body>
-    <div>
-        a
-    <div class="child">b</div>
-    </div>
+<div>
+    a
+</div>
+<div>b</div>
 </body>
 </html>
