--- a/html/1mTime/_mTime.html
+++ b/html/1mTime/_mTime.html
@@ -10,14 +10,43 @@
     <img src="Frame.png" alt="1만 시간의 법칙" class="mTimelogo">
     <img src="Frame%2012.png" alt="" class="background_clock">
 </header>
+
 <main>
-    <p class="a">"연습은 어제의 당신보다 당신을 더 낫게 만든다."</p>
+    <p class="head">"연습은 어제의 당신보다 당신을 더 낫게 만든다."</p>
+
     <p class="g"><span>
         <strong>1만 시간의 법칙</strong>은<br>어떤 분야의 전문가가 되기 위해서는<br>최소한 1만 시간의 훈련이 필요하다는 법칙이다.
+        <img src="따움표.png" alt="" class="qu">
     </span></p>
 
+    <p class="inputText">
+        나는
+        <input type="text" id="job" placeholder="예)프로그래밍">
+        전문가가 될 것이다.<br>
+        그래서 앞으로 매일 하루에
+        <input type="text" id="hour" placeholder="예)5시간">
+        시간씩 훈련할 것이다.
+    </p>
 
+    <input type="button" value="나는 며칠 동안 훈련을 해야 1만 시간이 될까?" class="output">
+    <img src="Frame%2011.png" alt="" class="hand">
+
+    <p class="outputText">
+        당신은 <span class="str">프로그래밍</span> 전문가가 되기 위해서<br>
+        대략 <span class="str">5110</span> 일 이상 훈련하셔야 합니다! :)
+    </p>
+
+    <input type="button" value="훈련하러 가기 GO!GO!" class="start">
+    <input type="button" value="공유하기" class="share">
 </main>
+
+<footer>
+    <img src="위니브.png" alt="weniv" class="weniv_logo">
+    <p class="warning">
+    ※ 본 서비스 내 이미지 및 콘텐츠의 저작권은 주식회사 weniv에 있습니다.<br>
+    수정 및 재배포, 무단 도용 시 법적인 문제가 발생할 수 있습니다.
+    </p>
+</footer>
 
 
 </body>
