--- a/html/20240509/link.html
+++ b/html/20240509/link.html
@@ -1,10 +1,14 @@
+<!-- index.html -->
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ko-KR">
 <head>
-  <meta charset="UTF-8">
-  <title>$Title$</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>외부 스타일</title>
+    <link rel="stylesheet" href="linkStyle.css">
 </head>
 <body>
-$END$
+<p>Hello world</p>
 </body>
 </html>
