--- a/html/20240510/03psudoForm.html
+++ b/html/20240510/03psudoForm.html
@@ -1,10 +1,16 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ko">
 <head>
-  <meta charset="UTF-8">
-  <title>$Title$</title>
+    <meta charset="UTF-8">
+    <title>Title</title>
+    <style>
+        input:disabled{
+            background-color: red;
+        }
+    </style>
 </head>
 <body>
-$END$
+<input type="text" readonly value="hello!!!">
+
 </body>
 </html>
