--- a/html/20240510/04position.html
+++ b/html/20240510/04position.html
@@ -1,10 +1,37 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ko">
 <head>
-  <meta charset="UTF-8">
-  <title>$Title$</title>
+    <meta charset="UTF-8">
+    <title>static</title>
+    <style>
+        .box1{
+            position:static;
+            background-color: green;
+            color:white;
+            width: 100px;
+            height: 100px;
+        }
+
+        .box2{
+            position:static;
+            background-color: red;
+            color:white;
+            width: 100px;
+            height: 100px;
+        }
+
+        .box3{
+            position:static;
+            background-color: blue;
+            color:white;
+            width: 100px;
+            height: 100px;
+        }
+    </style>
 </head>
 <body>
-$END$
+<div class="box1">box1</div>
+<div class="box2">box2</div>
+<div class="box3">box3</div>
 </body>
 </html>
