--- a/html/20240510/05position_1.html
+++ b/html/20240510/05position_1.html
@@ -1,10 +1,46 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ko">
 <head>
-  <meta charset="UTF-8">
-  <title>$Title$</title>
+<!--    static 포지션-->
+    <style>
+        .container {
+            position: relative;
+            width: 500px;
+            height: 500px;
+            margin-left: 100px;
+            border: 5px solid black;
+        }
+
+        .one {
+            width: 100px;
+            height: 100px;
+            border: 1px solid black;
+            color: white;
+        }
+
+        .one:nth-child(1) {
+            position: static;
+            background-color: red;
+        }
+
+        .one:nth-child(2) {
+            position: absolute;
+            top: 10px;
+            left: 10px;
+            background-color: green;
+        }
+
+        .one:nth-child(3) {
+            position: static;
+            background-color: blue;
+        }
+    </style>
 </head>
 <body>
-$END$
+<div class="container">
+    <div class="one">box1</div>
+    <div class="one">box2</div>
+    <div class="one">box3</div>
+</div>
 </body>
 </html>
