--- a/html/20240510/07position_3.html
+++ b/html/20240510/07position_3.html
@@ -1,10 +1,26 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ko">
 <head>
-  <meta charset="UTF-8">
-  <title>$Title$</title>
+<!--  sticky 포지션  -->
+    <style>
+        section {
+            height: 1000px;
+            border: 3px solid black;
+        }
+
+        h2 {
+            position: -webkit-sticky;
+            position: sticky;
+            top: 0px;
+            background: greenyellow;
+            margin: 0;
+        }
+    </style>
 </head>
+
 <body>
-$END$
+<h1>sticky test</h1>
+(section>h2{오늘의 메뉴$}+ul>(li>lorem)*3)*3
 </body>
+
 </html>
