--- a/html/20240510/09flex.html
+++ b/html/20240510/09flex.html
@@ -1,10 +1,33 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ko">
 <head>
-  <meta charset="UTF-8">
-  <title>$Title$</title>
+    <meta charset="UTF-8">
+    <title>Title</title>
+    <style>
+        ul{
+            display: flex;
+            list-style: none;
+            justify-content: start;
+        }
+
+        li{
+            width: 50px;
+            height: 50px;
+            border: 1px solid black;
+            background-color: teal;
+        }
+    </style>
 </head>
 <body>
-$END$
+lorem
+
+<ul>
+    <li>1</li>
+    <li>2</li>
+    <li>3</li>
+    <li>4</li>
+    <li>5</li>
+</ul>
+
 </body>
 </html>
