--- a/html/1mTime/_mTime.html
+++ b/html/1mTime/_mTime.html
@@ -19,14 +19,16 @@
         <img src="따움표.png" alt="" class="qu">
     </span></p>
 
-    <p class="inputText">
+    <article class="inputText">
         나는
+        <label for="job" class="hidden">되고싶은 전문가</label>
         <input type="text" id="job" placeholder="예)프로그래밍">
         전문가가 될 것이다.<br>
         그래서 앞으로 매일 하루에
+        <label for="hour" class="hidden">하루에 연습할 시간</label>
         <input type="text" id="hour" placeholder="예)5시간">
         시간씩 훈련할 것이다.
-    </p>
+    </article>
 
     <input type="button" value="나는 며칠 동안 훈련을 해야 1만 시간이 될까?" class="output">
     <img src="Frame%2011.png" alt="" class="hand">
