--- a/hodu/hodu.html
+++ b/hodu/hodu.html
@@ -8,10 +8,10 @@
 <body>
 <header>
     <div class="top_nav">
-        <img src="Logo-fin.svg" alt="hodu" class="logo">
+        <img src="Logo-fin.svg" alt="hoduLogo" class="logo">
         <nav class="menu">
             <ul>
-                <li><a href="http://www.naver.com" class="home">Home</a></li>
+                <li><a href="" class="home">Home</a></li>
                 <li><a href="" class="About">About</a></li>
                 <li><a href="" class="Support">Support</a></li>
             </ul>
@@ -26,13 +26,13 @@
         Lorem Ipsum has been the industry's standard dummy text <br>
         ever since the 1500s, when an unknown</h4>
         <input type="button" value="Download" class="download_two">
-        <img src="img_cat_png.png" alt="" class="boxCat">
+        <img src="img_cat_png.png" alt="boxHatCat" class="boxCat">
     </div>
 </header>
 
 <main>
     <div>
-        <img src="img_4.png" alt="" class="bedCat">
+        <img src="img_4.png" alt="lyingCat" class="bedCat">
         <div class="column">
             <h3>Lorem Ipsum is simply<br>
             dummy text of the printing<br>and dummy text</h3>
@@ -44,12 +44,12 @@
         Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown</h4>
 
     <div class="img_row">
-        <li><img src="img_1.png" alt=""></li>
-        <li><img src="img_2.png" alt=""></li>
-        <li><img src="img_3.png" alt=""></li>
-        <li><img src="img_1%20(1).png" alt=""></li>
-        <li><img src="img_2%20(1).png" alt=""></li>
-        <li><img src="img_3%20(1).png" alt=""></li>
+        <li><img src="img_1.png" alt="CatTowerCat"></li>
+        <li><img src="img_2.png" alt="backCat"></li>
+        <li><img src="img_3.png" alt="frontCat"></li>
+        <li><img src="img_1%20(1).png" alt="staringCat"></li>
+        <li><img src="img_2%20(1).png" alt="upStaringCat"></li>
+        <li><img src="img_3%20(1).png" alt="yawnCat"></li>
     </div>
 
     <p>Continue exploring HODU</p>
@@ -77,7 +77,7 @@
         <h4>Lorem Ipsum is simply dummy text of the printing and typesetting industry. <br>
             Lorem Ipsum has been the industry's standard dummy text </h4>
         <article>
-            <img src="mail.png" alt="">
+            <img src="mail.png" alt="mailEmoticon">
             <input type="text" name="" class="inpMail" value="" placeholder="Enter your e-mail address">
             <button>Subscribe</button>
         </article>
