--- a/hodu/hodu.html
+++ b/hodu/hodu.html
@@ -43,14 +43,20 @@
     <h4>Lorem Ipsum is simply <span>dummy text</span> of the printing and typesetting industry.<br>
         Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown</h4>
 
-    <div class="img_row">
-        <li><img src="img_1.png" alt="CatTowerCat"></li>
-        <li><img src="img_2.png" alt="backCat"></li>
-        <li><img src="img_3.png" alt="frontCat"></li>
-        <li><img src="img_1%20(1).png" alt="staringCat"></li>
-        <li><img src="img_2%20(1).png" alt="upStaringCat"></li>
-        <li><img src="img_3%20(1).png" alt="yawnCat"></li>
-    </div>
+    <article>
+        <ul class="img_row">
+            <li><img src="img_1.png" alt="CatTowerCat"></li>
+            <li><img src="img_2.png" alt="backCat"></li>
+            <li><img src="img_3.png" alt="frontCat"></li>
+            <li><img src="img_1%20(1).png" alt="staringCat"></li>
+            <li><img src="img_2%20(1).png" alt="upStaringCat"></li>
+            <li><img src="img_3%20(1).png" alt="yawnCat"></li>
+        </ul>
+        <ul class="more_img">
+            <li ></li>
+        </ul>
+
+    </article>
 
     <p>Continue exploring HODU</p>
     <button class="show_more">show more</button>
