--- a/html/20240523/stopPropagationEx.html
+++ b/html/20240523/stopPropagationEx.html
@@ -1,10 +1,41 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>$Title$</title>
+    <meta charset="UTF-8">
+    <title>Title</title>
 </head>
 <body>
-$END$
+<h1>나의 todo list</h1>
+<p>1. 오늘 저녁에는 부대찌게를 끓여 먹겠다.<button type="button">삭제</button></p>
+<p>2. 후식으로 슈팅스타를 먹겠다.<button type="button">삭제</button></p>
+<p>3. 자기 전에 반드시 내일 아침 메뉴를 생각해두겠다.<button type="button">삭제</button></p>
+<script>
+    // const clev = document.querySelectorAll('p');
+    // clev.forEach(p => {
+    //     p.addEventListener('click', () => {
+    //         alert(p.textContent);
+    //     });
+    // });
+
+    const txts = document.querySelectorAll('p');
+    const btns = document.querySelectorAll('button');
+    txts.forEach((item) => {
+        item.addEventListener('click', (event) => {
+            alert(event.target.childNodes[0].textContent);
+            // alert(event.target.textContent.slice(0, -2));
+        });
+    });
+
+    buts.forEach((item) => {
+        item.addEventListener('click', (event) => {
+            const result = confirm('삭제 하시겠습니까?');
+            // event.stopPropagation()
+            if (result) {
+                item.parentElement.remove();
+            }
+        })
+    })
+
+</script>
 </body>
 </html>
