--- a/hodu/hodu.html
+++ b/hodu/hodu.html
@@ -52,10 +52,7 @@
             <li><img src="img_2%20(1).png" alt="upStaringCat"></li>
             <li><img src="img_3%20(1).png" alt="yawnCat"></li>
         </ul>
-        <ul class="more_img">
-            <li ></li>
-        </ul>
-
+        <div class="more_img"></div>
     </article>
 
     <p>Continue exploring HODU</p>
