--- a/hodu/hodu.html
+++ b/hodu/hodu.html
@@ -52,7 +52,7 @@
             <li><img src="img_2%20(1).png" alt="upStaringCat"></li>
             <li><img src="img_3%20(1).png" alt="yawnCat"></li>
         </ul>
-        <div class="more_img"></div>
+        <ul class="more_img"></ul>
     </article>
 
     <p>Continue exploring HODU</p>
