--- a/hodu/test.html
+++ b/hodu/test.html
@@ -1,10 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>$Title$</title>
+    <meta charset="UTF-8">
+    <title>Title</title>
+    <link rel="stylesheet" href="hodu.css">
 </head>
 <body>
-$END$
+<div>
+    <img src="initial-image.jpg" alt="Initial Image">
+    <div id="more-images" class="more_img"></div>
+</div>
+    <button id="show-more-btn" class="show_more">Show More</button>
+
+<script src="test.js"></script>
 </body>
 </html>
