--- a/hodu/hodu.html
+++ b/hodu/hodu.html
@@ -74,7 +74,7 @@
         };
         let map = new kakao.maps.Map(container, options);
     </script>
-
+    <div class="asd">
     <div class="mail">
         <h2>Subscribe to our Blog post</h2>
         <h4>Lorem Ipsum is simply dummy text of the printing and typesetting industry. <br>
@@ -85,7 +85,9 @@
             <button>Subscribe</button>
         </article>
     </div>
-    <img src="img_5%20(1).png" alt="backgroundCat" class="backgroundCat">
+        <img src="img_5%20(1).png" alt="backgroundCat" class="backgroundCat">
+    </div>
+<!--    <img src="img_5%20(1).png" alt="backgroundCat" class="backgroundCat">-->
 </main>
 
 <aside>
