--- a/hodu/hodu.html
+++ b/hodu/hodu.html
@@ -67,27 +67,47 @@
     <div id="map" style="width: 1278px; height: 520px;"></div>
     <script type="text/javascript" src="//dapi.kakao.com/v2/maps/sdk.js?appkey=d6bf6ef18646f75711da1cd8c4365a08"></script>
     <script type="text/javascript">
-        const container = document.getElementById('map');
-        let options = {
-            center: new kakao.maps.LatLng(33.442237, 126.571474),
-            level: 2
-        };
-        let map = new kakao.maps.Map(container, options);
+        const mapContainer = document.getElementById('map'), // 지도를 표시할 div
+            mapOption = {
+                center: new kakao.maps.LatLng(33.442237, 126.571474), // 지도의 중심좌표
+                level: 3 // 지도의 확대 레벨
+            };
+
+        const map = new kakao.maps.Map(mapContainer, mapOption); // 지도를 생성합니다
+
+        // 지도를 클릭한 위치에 표출할 마커입니다
+        const marker = new kakao.maps.Marker({
+            // 지도 중심좌표에 마커를 생성합니다
+            position: map.getCenter()
+        });
+        // 지도에 마커를 표시합니다
+        marker.setMap(map);
     </script>
     <div class="asd">
-    <div class="mail">
-        <h2>Subscribe to our Blog post</h2>
-        <h4>Lorem Ipsum is simply dummy text of the printing and typesetting industry. <br>
-            Lorem Ipsum has been the industry's standard dummy text </h4>
-        <article>
-            <img src="mail.png" alt="mailEmoticon">
-            <input type="text" name="" class="inpMail" value="" placeholder="Enter your e-mail address">
-            <button>Subscribe</button>
-        </article>
-    </div>
+        <div class="mail">
+            <h2>Subscribe to our Blog post</h2>
+            <h4>Lorem Ipsum is simply dummy text of the printing and typesetting industry. <br>
+                Lorem Ipsum has been the industry's standard dummy text </h4>
+            <article>
+                <img src="mail.png" alt="mailEmoticon">
+                <input type="text" name="" class="inpMail" value="" placeholder="Enter your e-mail address">
+                <button id="show">Subscribe</button>
+            </article>
+        </div>
         <img src="img_5%20(1).png" alt="backgroundCat" class="backgroundCat">
     </div>
-<!--    <img src="img_5%20(1).png" alt="backgroundCat" class="backgroundCat">-->
+
+    <div class="background">
+        <div class="window">
+            <div class="popup">
+                <img src="cat%201.png" alt="catHead" class="catHead">
+                <h2>Thank you!</h2>
+                <h4>Lorem Ipsum is simply dummy text of the printing industry.</h4>
+                <button id="close">OK! I Love HODU</button>
+                <img src="무제-1%201.png" alt="backgroundImg" class="backgroundImg">
+            </div>
+        </div>
+    </div>
 </main>
 
 <aside>
